style/style.css
html,
body {
  height: 100%;
  padding: 0;
  margin: 0;
}
* {
  box-sizing: border-box;
}

.bg-image {
  background-image: url('./images/house.jpg');
  filter: blur(8px);
  -webkit-filter: blur(8px);

  height: 100%;

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-text {
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0, 0.4);
  color: white;
  font-family: verdana;
  font-size: 150%;
  font-weight: bold;
  border: 1px solid #f1f1f1;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  height: 200px;
  line-height: 160px;
  width: 40%;
  padding: 20px;
  text-align: center;
}

